--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -1,121 +1,304 @@
 :root {
-    --base-color: #ffffff,
+    --base-color: #ffffff;
+    --base-font-color: #333333;
+    --base-font-size: 16 px;
+    --border-color: #d7dde4;
+    --body-color: #f8f9fa;
+    --hover-color: #eaeaea;
+    --transition-duration: 0.15 s;
+    --base-color-alt3: #e4e9ec;
+}
 
+
+*{
+    box-sizing: border-box;
+}
+
+
+h1{
+    font-size: 1.5rem;
+}
+h3{
+    font-weight:400;
 }
 
 body{
     margin: 0;
     padding: 0;
-    font-family: "Source Sans Pro", sans-serif, emoji;;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #333;
-}
-
-#app{
-    overflow: auto;
-    display: block;
-    width: 100%;
+    font-family: sans-serif;
+    font-size: var(--base-font-size);
+    line-height: 1.5 ;
+    color: var(--base-font-color);
+    display: flex;
     height: 100vh;
-    background-color: var(--base-color);
+    width: 100%;
+    background-color: var(--body-color);
 }
 
-.app-layout{
-    display: flex;
-    width: 100%;
+/*navbar*/
+nav{
     height: 100vh;
-}
-
-.app-body{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-}
-
-.app-sidebar{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 0;
-    flex-shrink: 0;
-    border-right: 1px solid #eaeaea;
-}
-
-.side-navigation{
-    row-gap: 1rem;
-    margin-top: 32px;
     width: 5rem;
+    flex-shrink: 0;
+    padding: 1rem;
+    border-right: 1px solid var(--border-color);
+    background-color: var(--base-color);
+    
     display: flex;
+    row-gap: 1rem;
     flex-direction: column;
     align-items: center;
+    overflow: auto;
 }
-
 .nav-button{
-    font-weight: bold;
-    font-size: small;
-    padding: 0;
     width: 45px;
     height: 45px;
-    border: none;
-    cursor: pointer;
-    background-color: inherit;
     border: 2px solid transparent;
     border-radius: 25%;
+    flex-shrink: 0;
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: 0.15s;
+    transition: var(--transition-duration);
 }
-
 .nav-button:hover{
-    background-color: #eaeaea;
+    background-color: var(--hover-color);
 }
-
 .selected-nav-button{
-    background-color: var(--base-color) !important;
-    border: 2px solid #333;
+    background-color: var(--base-color);
+    border: 2px solid var(--base-font-color);
+}
+.selected-nav-button:hover{
+    background-color: var(--base-color);
 }
 
-table {
-    overflow: auto;
-}
 
-main {
-    width: 100%;
+
+
+/*Body*/
+.app-body{
+    height: 100vh;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    position: relative;
+    overflow: auto;
 }
 
-.scroller_wrapper{
-    position: relative;
-    height: 100%;
-    overflow: auto;
+.app-body > * {
+    width: 100%;
+    padding: 0 1rem;
 }
 
 header{
-    padding: 20px;
-    border-bottom: 1px solid #eaeaea;
+    height: 5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-h1{
-    margin: 0;
-    font-size: 1.5rem;
-}
-
-.content{
+.app-body > main {
+    padding: 0 0;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     position: relative;
-    height: 100%;
-    padding: 20px;
     overflow: auto;
 }
 
-.arrow_open{
-    transform: rotate(180deg);
-    transition: 0.15s;
+
+
+/*tables*/
+
+table{
+    cursor: pointer;
+    user-select: none;
+    border-collapse: collapse;
+    overflow: auto;
 }
 
-.arrow_close{
-    transition: 0.15s;
+table > thead {
+    height: 4rem;
 }
+
+table > tbody {
+    overflow: auto
+}
+
+
+
+table > thead > tr > th{
+    text-align: left;
+    font-weight: 300;
+}
+
+table >thead >tr {
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1) ;
+}
+
+table > * > tr > *{
+    padding: 1rem 1rem;
+    border-bottom: 1px solid var(--border-color);
+}
+
+table > * > tr > *:first-child{
+    padding-left: 2rem;
+}
+
+table > * > tr > *:last-child{
+    padding-right: 2rem;
+}
+
+table > tbody > tr:hover{
+    background-color: var(--hover-color);
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1) inset;
+}
+
+table > tbody > tr > td{
+    font-weight: 200;
+}
+
+
+/*overlays*/
+.overlay{
+    position:fixed;
+    height: 100vh;
+    width: 100%;
+    max-width: 700px;
+    background-color: var(--base-color);
+    right: 0;
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
+}
+.overlay-background{
+    position:fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0,0,0,0.1);
+    right: 0;
+}
+
+.overlay-content{
+    display: flex;
+    flex-flow: column nowrap;
+    column-gap: 1rem;
+    height: 100vh;
+    padding: 0;
+}
+
+.overlay-content > header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+    border-bottom: 1px solid var(--border-color);
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.1) ;
+    column-gap: 1rem;
+}
+
+.overlay-content > *{
+    width: 100%;
+    padding: 0 2rem;
+}
+
+.overlay-content > footer{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1rem;
+    border-top: 1px solid var(--border-color);
+    box-shadow: 0 0 10px 0 rgba(0,0,0,0.1) ;
+    column-gap: 1rem;
+}
+
+.main-info-wrapper{
+    display: flex;
+    justify-content: space-between;
+    flex-grow: 1;
+    padding: 1rem 2rem ;
+    overflow: auto;
+}
+
+.cake-info{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.cake-info:hover{
+    background-color: var(--hover-color);
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1) inset;
+}
+
+.cake-info:last-child{
+    border-bottom: none;
+    border-radius: 0 0 5px 5px;
+}
+
+.cake-info:first-child{
+    border-radius: 5px 5px 0 0;
+}
+
+.cake-info > h3{
+    overflow-x: auto;
+    margin: 0;
+    padding: 0;
+}
+
+.main-info{
+    display: flex;
+    flex-direction: column;
+    width: 49%;
+    column-gap: 1rem;
+    row-gap: 1.2rem;
+    overflow: auto;
+    line-break: auto;
+}
+
+.main-info > *{
+    margin: 0 5px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: var(--body-color);
+    box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.01) inset ;
+    border : 1px solid var(--border-color);
+    padding: 0.5rem 1rem;
+}
+
+.main-info > *:hover{
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.1);
+}
+
+.text-info > span {
+    overflow-x: auto;
+}
+
+.text-info > h3{
+    margin: 0;
+    padding: 0;
+}
+
+.order-contents{
+    padding: 0;
+    border-bottom: none;
+}
+
+.order-contents:hover{
+    box-shadow: none;
+}
+
+
+/* form */
+form{
+    display: flex;
+    flex-direction: row;
+    padding: 1rem 2rem;
+    overflow: auto;
+    height: 100%;
+}
+
+
