--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -60,13 +60,7 @@ body{
 
 /*navbar*/
 nav{
-    height: 100vh;
-    width: 5rem;
     flex-shrink: 0;
-    padding: 1rem;
-    border-right: 1px solid var(--border-color);
-    background-color: var(--base-color);
-    
     display: flex;
     row-gap: 1rem;
     flex-direction: column;
@@ -95,7 +89,19 @@ nav{
 .selected-nav-button:hover{
     background-color: var(--base-color);
 }
-
+aside{
+    min-width: 5rem;
+    max-width: 5rem;
+    padding: 1rem 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid var(--border-color);
+    background-color: var(--base-color);
+    align-items: center;
+    justify-content: space-between;
+    overflow: auto;
+}
 
 
 
@@ -114,7 +120,8 @@ nav{
 }
 
 header{
-    height: 5rem;
+    max-height: 5rem;
+    min-height: 5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -309,3 +316,43 @@ form{
 }
 
 
+/*login*/
+.login-screen{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--body-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login-screen > form{
+    padding: 0;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    max-width: 400px;
+    height: 100%;
+    max-height: 400px;
+    border: 1px solid var(--border-color);
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.1);
+}
+
+.login-screen > form > *{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2rem;
+    width: 100%;
+}
+
+.login-screen > form > * > *{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
