--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -312,6 +312,7 @@ main > .main-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 
@@ -325,6 +326,11 @@ main > .main-info {
     align-items: center;
     border-top: 1px solid var(--border-color);
     box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.05);
+}
+
+
+textarea {
+    width: 100%;
 }
 
 
