--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -336,21 +336,10 @@ main > .main-info {
     align-items: center;
 }
 
-.overlay >main >.order-contents > .cake-info >div{
-    width:40px;
-    height:40px;
-    border-radius: 100%;
-    font-weight: 100;
-    cursor: pointer;
-}
-.overlay >main >.order-contents > .cake-info >div:hover{
-    background-color: var(--hover-color);
-    transition: var(--transition-duration);
-}
 
-
-.overlay > main > .order-contents > .cake-info>h3{
+.overlay > main > .order-contents > .cake-info>.pseudo-header{
     justify-content: flex-start;
+    padding-left: 1rem;
 }
 
 
