--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -284,6 +284,11 @@ table > tbody > tr > td{
         transition: var(--transition-duration);
         box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.05) inset;
     }
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 1rem;
 }
 
 .overlay > main > .order-contents{
