--- a/vite-project/src/style.css
+++ b/vite-project/src/style.css
@@ -284,12 +284,16 @@ table > tbody > tr > td{
         transition: var(--transition-duration);
         box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.05) inset;
     }
-
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 1rem;
+    flex-wrap: wrap;
+    &:has(textarea){
+        padding-bottom: 1rem;
+    }
 }
+
 
 .overlay > main > .order-contents{
     display: flex;
